# ensemble-cam-v2

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  GIT_SETUP.md  LICENSE  MOBILENETV3_INTEGRATION.md  README.md  SETUP.md  TRAINING_GUIDE.md  app.py  config_classifiers.toml  env.txt  main.py  platform_info.txt  pyproject.toml  quick_run.txt  requirements.txt  upload_to_github.sh
docs/: about pytorchgradcam.md  about torchxrayvision.md  model-comparison.md  the-web-UI.txt
examples/: dataset_download_huggingfaces.py  train_resnet50.py
models/: training_history.json
models/densenet121/: 20251005_181942_training_performance.csv  model_config.json  test_results.json  training_history.json
models/inception_resnet_v2/: 20251007_205353_training_performance.csv  model_config.json  test_results.json  training_history.json
models/resnet50/: 20251005_174204_training_performance.csv  20251005_175000_training_performance.csv  20251005_175512_training_performance.csv  20251005_175838_training_performance.csv  20251005_180406_training_performance.csv  20251009_064213_training_performance.csv  model_config.json  test_results.json  training_history.json
notebooks/: playbook1_prepare_dataset.ipynb  playbook2_train_Xception.ipynb
scripts/: README.md  github_import.bat  github_import.ps1  github_import.sh  github_upload.bat  github_upload.ps1
src/: cam_utils.py  classify_densenet121.py  classify_jfhealthcare.py  classify_mobilenetv3.py  classify_resnet50.py  generate_bbox.py  generate_bbox_consolidated.py  generate_cams.py  train_mobilenet.py
weights/: README.md
(+31 files in other folders)
