[project]
name = "ensemble-cam2"
version = "0.1.0"
description = "Ensemble-CAM2: Weak-supervised Localization of thoracic diseases in X-rays images with interpretability"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "pillow>=7.1.0,<12.0.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "torchxrayvision>=1.4.0",
    "streamlit>=1.40.0",
    "tomli>=2.0.0",
    "scikit-image>=0.24.0",
    "grad-cam>=1.5.5",
    "opencv-python>=4.8.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]
